--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>KMRL Dashboard</title>
   <!-- Path updated to scripts folder -->
-  <link rel="stylesheet" href="../static/style1.css">
+  <link rel="stylesheet" href="/static/style1.css">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
   </main>
 
   <!-- JS path updated for static folder -->
-  <script src="../static/app.js"></script>
+  <script src="/static/app.js"></script>
 </body>
 
 </html>
