--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>KMRL Dashboard</title>
   <!-- Path updated to scripts folder -->
-  <!-- <link rel="stylesheet" href="/static/style1.css"> -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='style1.css') }}">
+  <link rel="stylesheet" href="/static/style1.css">
+  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='style1.css') }}"> -->
 </head>
 
 <body>
@@ -54,8 +54,8 @@
   </main>
 
   <!-- JS path updated for static folder -->
-  <!-- <script src="/static/app.js"></script> -->
-  <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="/static/app.js"></script>
+  <!-- <script src="{{ url_for('static', filename='script.js') }}"></script> -->
 </body>
 
 </html>
