--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <div class="header-content">
       <h1><img src="/static/logo.jpg" alt="Logo" class="header-logo"><i class="fa-solid fa-train-subway"></i> KMRL Induction Dashboard</h1>
       <div class="header-controls">
-        <button onclick="loadAll()"><i class="fa-solid fa-arrows-rotate"></i> Refresh All</button>
+        <button onclick="location.reload()"><i class="fa-solid fa-arrows-rotate"></i> Refresh All</button>
         <label class="theme-switch">
           <input type="checkbox" id="theme-toggle">
           <span class="slider"></span>
